# mcve

./: .gitignore
thrust1/: CMakeLists.txt  main.cu
thrust2/: main.cu
thrust3/: CMakeLists.txt  main.cu
